Implemented endpoints of webauthn
Closes #19
Closes #29
Closes #30
Closes #31
Closes #32
